Switched to Flask

--- a/templates/index.html
+++ b/templates/index.html
@@ -7,6 +7,5 @@
 </style>
 <body>
 <script src="http://d3js.org/d3.v3.min.js"></script>
-<script src="http://d3js.org/topojson.v1.min.js"></script>
-<script src="./map.js"></script>
+<script src="{{ url_for('static', filename='map.js') }}"></script>
 </body>
