--- a/templates/index.html
+++ b/templates/index.html
@@ -31,6 +31,21 @@ div#extra{float:right;clear:right;width:300px}
 
 div#footer{clear:both;width:100%}
 
+
+.hidden { 
+  display: none; 
+}
+
+div.tooltip {
+  color: #222; 
+  background: #fff; 
+  padding: .5em; 
+  text-shadow: #f5f5f5 0 1px 0;
+  border-radius: 2px; 
+  box-shadow: 0px 0px 2px 0px #a6a6a6; 
+  opacity: 0.9; 
+  position: absolute;
+}
 </style>
 <body>
 <div id="container">
