--- a/templates/example.html
+++ b/templates/example.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
-<title>D3 Geo World Map Boilerplate | TechSlides</title>
+<title>Busbud coding challenge | Jeff Blagdon</title>
+<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css">
 <style>
 
 .country{
@@ -25,6 +26,12 @@ div.tooltip {
   box-shadow: 0px 0px 2px 0px #a6a6a6; 
   opacity: 0.9; 
   position: absolute;
+}
+
+div.scrollbox{
+  border:2px solid #ccc;
+  width:300px; height: 100px; 
+  overflow-y: scroll;
 }
 
 div#wrapper{
@@ -54,12 +61,15 @@ div#footer{clear:both;width:100%}
       <div id="content" class="column"></div>
     </div>
     <div id="sidebar" class="column">
-      <h1 class="country_name" id="country_header">Canada</h1>
-      <p><ul>
-        <li class="stat" id="num_over_15k">Here</li>
-        <li class="stat" id="num_covered">we</li>
-        <li class="stat" id="pct_covered">go</li>
-      </ul></p>
+      <h1 id="country_header"></h1>
+      <h2>% of cities covered: <span id="percent_in_target"></span></h2>
+      <h2># of cities over 15k: <span id="num_over_15k"></span></h2>
+      <h2># of cities in target: <span id="num_in_target"></span></h2>
+      <h3>Cities in target:</h3>
+      <div class="scrollbox" id="cities_in_target">
+      </div>
+      <h3>Cities not in target:</h3>
+      <div class="scrollbox" id="cities_out_target"></div>
     </div>
     <div id="footer"></div>
   </div>
@@ -68,6 +78,11 @@ div#footer{clear:both;width:100%}
 <script>
 
 var GOLDEN = 1.618;
+
+var DEFAULT_COUNTRY = {
+  code: "CA",
+  name: "Canada"
+};
 
 d3.select(window).on("resize", throttle);
 
@@ -100,7 +115,8 @@ function setup(width,height){
       .call(zoom);
 
   g = svg.append("g");
-
+  fetchCountryData(DEFAULT_COUNTRY.code);
+  setCountryName(DEFAULT_COUNTRY.name);
 }
 
 var geodata;
@@ -136,9 +152,13 @@ function draw(points) {
         tooltip.classed("hidden", true)
       })
       .on("click", function(d,i) {
-        document.querySelector("h1#country_header").innerHTML=d.properties.name;
+        setCountryName(d.properties.name);
         fetchCountryData(d.properties.iso_a2);
       });
+}
+
+function setCountryName(name){
+  document.querySelector("h1#country_header").innerHTML=name;
 }
 
 function fetchCountryData(countryCode) {
@@ -156,7 +176,8 @@ function fetchCountryData(countryCode) {
 
 function setSidebarText(countryObj) {
   console.log(countryObj);
-  document.querySelector("li.stat#num_over_15k").innerHTML = countryObj.total_over_15k;
+  document.querySelector("span#num_over_15k").innerHTML = countryObj.total_over_15k;
+  document.querySelector("span#percent_in_target").innerHTML = countryObj.percentage_covered;
 }
 
 function redraw() {
